--- a/JupyterNotebookVersion/BobTrieste_Overview_2019.ipynb
+++ b/JupyterNotebookVersion/BobTrieste_Overview_2019.ipynb
@@ -1726,7 +1726,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Only \"The Godfather: Pat II\" is 200 minute or more out of the anove sample !**"
+    "**Only \"The Godfather: Pat II\" is 200 minutes or more out of the above sample !**"
    ]
   },
   {
